--- a/stage/css/sass/layout/_global.scss
+++ b/stage/css/sass/layout/_global.scss
@@ -2,9 +2,9 @@
     box-sizing: border-box;
 }
 
-body {
+// body {
 
-}
+// }
 
 .page {
     min-height: 100vh;
@@ -14,5 +14,8 @@ body {
         transition: .3s;
         float: right;
         will-change: width;
+        &.no-sidebar {
+            width: 100%;
+        }
     }
 }
