--- a/stage/css/sass/layout/_sidebar.scss
+++ b/stage/css/sass/layout/_sidebar.scss
@@ -7,6 +7,9 @@
         height: 100%;
         background-color: #eee;
         padding: 15px;
-        transition: .3s;   
+        transition: .3s;
+        &.no-sidebar {
+            left: -250px;
+        }
     }
 }
