--- a/stage/css/sass/layout/_sidebar.scss
+++ b/stage/css/sass/layout/_sidebar.scss
@@ -12,5 +12,75 @@
         &.no-sidebar {
             left: -250px;
         }
+        .logo-area {
+            font-weight: bold;
+            font-size: 26px;
+            margin-bottom: 30px;
+        }
+        .links-area {
+            li {
+                a {
+                    color: #CCC;
+                    padding: 10px 20px;
+                    display: block;
+                    text-decoration: none;
+                    transition: .3s;
+                    &:hover {
+                        color: #FFF;
+                    }
+                    .fa-angle-right,
+                    .fa-angle-down {
+                        float: right;
+                        position: relative;
+                        top: 6px;
+                    }
+                }
+            }
+            > li {
+                > a {
+                    color: #FFF;
+                    position: relative;
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        top: 50%;
+                        width: 10px;
+                        height: 10px;
+                        border-radius: 50%;
+                        border: 2px solid #FFF;
+                        transform: translateY(-50%);
+                    }
+                    &:hover {
+                        padding-left: 25px;
+                    }
+                }
+            }
+            .child-links {
+                position: relative;
+                display: none;
+                &:before {
+                    content: "";
+                    position: absolute;
+                    left: 3px;
+                    top: 0;
+                    width: 3px;
+                    height: 100%;
+                    background-color: #666;
+                }
+                a {
+                    position: relative;
+                    &:hover:before {
+                        content: "";
+                        left: 3px;
+                        top: 0;
+                        width: 3px;
+                        height: 100%;
+                        background-color: #FFF;
+                        position: absolute;
+                    }
+                }
+            }
+        }
     }
 }
