--- a/stage/html/pug/layout/styles.pug
+++ b/stage/html/pug/layout/styles.pug
@@ -1,2 +1,5 @@
 link(rel="stylesheet", href="css/bootstrap.min.css")
 link(rel="stylesheet", href="css/main.css")
+link(rel="preconnect", href="https://fonts.googleapis.com")
+link(rel="preconnect", href="https://fonts.gstatic.com" crossorigin)
+link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Cairo:wght@500&family=Open+Sans:ital,wght@0,700;1,400&family=Work+Sans:wght@200;300;400;500;600;800&display=swap")
