--- a/stage/css/main.scss
+++ b/stage/css/main.scss
@@ -1,3 +1,4 @@
 @import 'sass/layout/global';
+@import 'sass/helpers/classesHelpers.scss';
 @import 'sass/layout/sidebar';
 @import 'sass/layout/header';
