--- a/stage/css/main.scss
+++ b/stage/css/main.scss
@@ -1,4 +1,6 @@
+@import 'sass/options/colors';
 @import 'sass/layout/global';
 @import 'sass/helpers/classesHelpers.scss';
 @import 'sass/layout/sidebar';
 @import 'sass/layout/header';
+@import 'sass/components/settings-box';
