--- a/stage/css/sass/layout/_global.scss
+++ b/stage/css/sass/layout/_global.scss
@@ -19,4 +19,15 @@ body {
             width: 100%;
         }
     }
+    .page-head {
+        margin-top: 15px;
+        padding: 20px;
+        .page-title {
+            font-weight: bold;
+            color: #27ae60;
+        }
+        .page-description {
+
+        }
+    }
 }
