--- a/stage/css/sass/layout/_header.scss
+++ b/stage/css/sass/layout/_header.scss
@@ -1,6 +1,14 @@
 .header {
     background-color: #FFF;
     padding: 20px;
+    .header-icon {
+        background-color: #f9f9f9;
+        padding: 10px;
+        border-radius: 50%;
+        color: #555;
+        cursor: pointer;
+        margin-left: 10px;
+    }
     .toggle-sidebar {
         cursor: pointer;
     }
@@ -8,13 +16,6 @@
 .notification-container {
     display: inline-block;
     margin-left: 20px;
-    .toggle-notifications {
-        background-color: #f9f9f9;
-        padding: 10px;
-        border-radius: 50%;
-        color: #555;
-        cursor: pointer;
-    }
     .dropdown-menu {
         min-width: 600px;
         border: none;
@@ -24,7 +25,7 @@
             content: "";
             position: absolute;
             top: -20px;
-            left: 8px;
+            left: 19px;
             border-style: solid;
             border-width: 10px;
             border-color: transparent transparent #333333 transparent;
@@ -33,6 +34,7 @@
             background-color: #333;
             padding: 15px;
             color: #FFF;
+            font-weight: bold;
             span {
                 float: right;
             }
@@ -42,18 +44,41 @@
             ul {
                 margin: 0;
                 li {
-                    padding: 10px;
+                    padding: 5px;
+                    font-weight: bold;
+                    color: #777;
+                    border-bottom: 1px solid #e9e8e8;
+                    margin-bottom: 10px;
+                    font-size: 15px;
+                    &:first-child {
+                        padding-top: 0;
+                    }
+                    &:last-child {
+                        padding-bottom: 0;
+                        margin-bottom: 0;
+                        border-bottom: none;
+                    }
                     i {
-                        background-color: #EEE;
-                        padding: 10px;
-                        border-radius: 50%;
-                        width: 45px;
-                        height: 45px;
-                        line-height: 26px;
+                        background-color: #f7f7f7;
+                        width: 30px;
+                        height: 30px;
+                        line-height: 30px;
                         text-align: center;
                         margin-right: 10px;
                         position: relative;
-                        top: -2px;
+                        top: -5px;
+                        text-align: center;
+                        font-size: 14px;
+                        color: #FFF;
+                        &.fa-envelope {
+                            background-color: #4caf50;
+                        }
+                        &.fa-money-bill {
+                            background-color: #2196f3;
+                        }
+                        &.fa-thumbs-up {
+                            background-color: #ff9800;
+                        }
                     }
                 }
             }
@@ -64,6 +89,61 @@
                 padding: 10px;
                 border-top: 1px solid #EEE;
                 text-decoration: none;
+            }
+        }
+    }
+}
+
+.usermenu-container {
+    float: right;
+    .usermenu {
+        img {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin-right: 10px;
+        }
+        span {
+            margin-right: 10px;
+            position: relative;
+            top: 3px;
+        }
+        i {
+            position: relative;
+            top: 3px;
+            cursor: pointer;
+        }
+    }
+    .dropdown-menu {
+        right: 0;
+        position: absolute;
+        padding: 15px;
+        top: 45px;
+        border-radius: 0;
+        min-width: 600px;
+        p {
+            margin: 0;
+        }
+        .options {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 15px;
+            .option {
+                padding: 5px;
+                border: 1px solid #e8e8e8;
+                border-radius: 5px;
+                i {
+                    margin-right: 5px;
+                    &.red {
+                        color: #c0392b;
+                    }
+                    &.green {
+                        color: #16a085;
+                    }
+                    &.blue {
+                        color: #2980b9;
+                    }
+                }
             }
         }
     }
