--- a/stage/css/sass/layout/_sidebar.scss
+++ b/stage/css/sass/layout/_sidebar.scss
@@ -76,7 +76,7 @@
                         top: 0;
                         width: 3px;
                         height: 100%;
-                        background-color: #FFF;
+                        background-color: #27ae60;
                         position: absolute;
                     }
                 }
