--- a/stage/html/homepage.pug
+++ b/stage/html/homepage.pug
@@ -6,6 +6,7 @@ html(lang="en")
         include pug/layout/styles
     body 
         .page.homepage
+            include pug/components/settings-box
             include pug/layout/sidebar
             .content-area
                 include pug/layout/header
